--- a/MvvmWebSwitcher/Configurations/ConfigurationDialog.xaml
+++ b/MvvmWebSwitcher/Configurations/ConfigurationDialog.xaml
@@ -1,13 +1,13 @@
-﻿<platformUi:DialogWindow x:Class="WebSwitcher.Configurations.ConfigurationDialog"
+﻿<platformUi:DialogWindow x:Class="MvvmWebSwitcher.Configurations.ConfigurationDialog"
                          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                          xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
-                         xmlns:core="clr-namespace:WebSwitcher.Configurations.Core"
-                         xmlns:viewModels="clr-namespace:WebSwitcher.Configurations"
+                         xmlns:viewModels="clr-namespace:MvvmWebSwitcher.Configurations"
+                         xmlns:core="clr-namespace:MvvmWebSwitcher.Configurations.Core"
                          mc:Ignorable="d"
-                         Title="WebSwitcher Configuration"
+                         Title="MvvmWebSwitcher Configuration"
                          Width="400"
                          Height="300"
                          d:DataContext="{d:DesignInstance {x:Type viewModels:ConfigurationViewModel}}"
